--- a/google_login/index.html
+++ b/google_login/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>로그인 | 구글글</title>
+    <title>로그인 | 구글</title>
     <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" href="style/design.css">
+    <script type="module" src="script/script.js"></script>
 </head>
 <body>
     <div id="login">
@@ -17,13 +18,15 @@
                 <legend>로그인양식</legend>
                 <ul>
                     <li><input type="text"name="user_id" placeholder="이메일 또는 휴대전화"></li>
-                    <li><a href="#">이메일을 잊으셨나요?</a></li>
+                    <!--임시로 google이메일 찾기 웹사이트로 연결-->
+                    <li><a href="https://accounts.google.com/signin/v2/usernamerecovery?continue=https%3A%2F%2Fwww.google.com%2F%3Fhl%3Dko&ddm=1&dsh=S-1106966674%3A1739934697162361&ec=GAZAmgQ&flowEntry=ServiceLogin&flowName=GlifWebSignIn&hl=ko&ifkv=ASSHykoXWr6QujToks_7Fle2OU9SqAMJADuEt3gCmsYJahoNF-0NeCARJlk2gRbShZmKstwFb1As">이메일을 잊으셨나요?</a></li>
                     <li>내 컴퓨터가 아닌가요? 게스트 로드를 사용하여 비공개로 로그인하세요.
                         <a href="#">자세히 알아보기</a>
                     </li>
                 </ul>
                 <div class="bottom">
-                    <a href="#" name="join">계정 만들기</a>
+                    <!--임시로 google 계정만들기 웹사이트로 연결-->
+                    <a href="https://accounts.google.com/lifecycle/steps/signup/name?continue=https://www.google.com/?hl%3Dko&ddm=1&dsh=S1359270252:1739934616059422&ec=GAZAmgQ&flowEntry=SignUp&flowName=GlifWebSignIn&hl=ko&ifkv=ASSHykreSTCqHDjQhvDSImadOpWC5egjc5hYOjkcACRzEfm3VgyJkCCbt4Q5OuWZdqdwc4w8XFa2&TL=ADgdZ7QFCG2GGgqnA35wCA7Csvp4vwqezmy6z3fTC4tVw-ZCJDwHhOKhQ72BDP-0" name="join">계정 만들기</a>
                     <button type="button" id="next_btn">다음</button>
                 </div>
             </fieldset>
@@ -31,10 +34,11 @@
         <footer>
             <select name="lang_select" id="lang_select">
                 <option value="korean">한국어</option>
+                <option value="english">English</option>
             </select>
             <div calss="right">
-                <a href="#">도움말</a>
-                <a href="#">개인정보처리방침</a>
+                <a href="help.html">도움말</a>
+                <a href="option.html">개인정보처리방침</a>
                 <a href="#">약관</a>
             </div>
         </footer>
