--- a/google_login/index.html
+++ b/google_login/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="login">
-        <h1><img src="image/logo.png" alt="구글"></h1>
+        <h1><a href="https://google.com"><img src="image/logo.png" alt="구글"></a></h1>
         <h1>로그인</h1>
         <h2>Google 계정 사용</h2>
         <form action="#" method="post" id="login_frm">
@@ -39,5 +39,8 @@
             </div>
         </footer>
     </div>
+
+    <script src="script/index.js"></script>
+
 </body>
 </html>
