--- a/google_login/main.html
+++ b/google_login/main.html
@@ -8,13 +8,9 @@
     <link rel="stylesheet" href="style/reset.css">
 </head>
 <body>
-    <ul id="menu">
-        <li>프로필</li>  
-        <li>메뉴</li>
-        <li>실험실</li>
-        <li>이름</li>
-        <li>Gmail</li>
-    </ul>
+    <div class="menu">
+        
+    </div>
     <h2><img src="image/logo.png"></h2>
     <input type="text" name="serch" placeholder="Google 검색 또는 URL 입력">
     <button>돋보기</button>
